DB changed from MySQL to SQLiteDB

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?serverTimezone=Europe/Moscow&useSSL=false
+jdbc.driverClassName=org.sqlite.JDBC
+jdbc.url=jdbc:sqlite:db.sqlite3
 jdbc.username=root
 jdbc.password=1qaz@WSX
 
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.dialect=com.enigmabridge.hibernate.dialect.SQLiteDialect
 hibernate.show_sql=true
