--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <tomcat.version>9.0.17</tomcat.version>
+        <tomcat.version>9.0.20</tomcat.version>
         <jackson.version>2.9.9</jackson.version>
     </properties>
 
@@ -139,7 +139,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-dbcp</artifactId>
-            <version>9.0.10</version>
+            <version>${tomcat.version}</version>
         </dependency>
 
         <dependency>
